data/all_generated_tests/raw_wast_tests/br_InvalidorInconsistentControlFlowGraph_766.wast
;; 7. **Branching to Non-existent Label Test**: Implement a control structure where the `br` instruction references a label index that exceeds the number of available labels in the current context. This tests whether the implementation properly handles and rejects branches to undefined labels.

(assert_invalid
  (module
    (func (block (br 1)))
  )
  "unknown label"
)